--- a/template.ejs
+++ b/template.ejs
@@ -3,6 +3,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title><%= htmlWebpackPlugin.options.title %></title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+  
 </head>
   <body>
     <% if (htmlWebpackPlugin.options.appMountId) { %>
@@ -10,4 +13,3 @@
     <% } %>
   </body>
 </html>
-
