--- a/template.ejs
+++ b/template.ejs
@@ -5,7 +5,15 @@
   <title><%= htmlWebpackPlugin.options.title %></title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
-  
+  <style>
+
+    body {
+      background-color: #E8ECEF;
+      margin: 0;
+      padding: 0;
+    }
+
+  </style>
 </head>
   <body>
     <% if (htmlWebpackPlugin.options.appMountId) { %>
